--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+  <!-- ✅ Updated SEO + Social Meta Tags -->
+  <title>Rajvirsinh Dabhi – MERN Stack Developer Portfolio</title>
+  <meta name="title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
+  <meta name="description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+
+  <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://your-portfolio-url.vercel.app/" />
+  <meta property="og:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
+  <meta property="og:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D4D16AQGgKOi3SgR6BA/profile-displaybackgroundimage-shrink_350_1400/B4DZeyTSr8GkAc-/0/1751043092253?e=1756944000&v=beta&t=axMS5oAK7lhKDajpF-8tGXyRjHGRNGURiQYUusoDjCA" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://your-portfolio-url.vercel.app/" />
+  <meta property="twitter:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
+  <meta property="twitter:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+  <meta property="twitter:image" content="https://media.licdn.com/dms/image/v2/D4D16AQGgKOi3SgR6BA/profile-displaybackgroundimage-shrink_350_1400/B4DZeyTSr8GkAc-/0/1751043092253?e=1756944000&v=beta&t=axMS5oAK7lhKDajpF-8tGXyRjHGRNGURiQYUusoDjCA" />
+
+  <!-- Apple icon and manifest -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
