image add  at seo1

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,16 @@
   <meta property="og:url" content="https://your-portfolio-url.vercel.app/" />
   <meta property="og:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
   <meta property="og:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
-  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D4D16AQE669q7mnsWMA/profile-displaybackgroundimage-shrink_350_1400/B4DZfK6pCsGkAc-/0/1751456060919?e=1758153600&v=beta&t=s7P6t5-dmLowLSjPa7-0ZcaiZ7ilwYn91lrJQ2RgdZA" />
+<meta property="og:image" content="https://drive.google.com/uc?export=view&id=1gyA8iuUJK6gXDf95dUhK1p3TwyVl2gAA" />
+
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://your-portfolio-url.vercel.app/" />
   <meta property="twitter:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
   <meta property="twitter:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
-  <meta property="twitter:image" content="https://media.licdn.com/dms/image/v2/D4D16AQE669q7mnsWMA/profile-displaybackgroundimage-shrink_350_1400/B4DZfK6pCsGkAc-/0/1751456060919?e=1758153600&v=beta&t=s7P6t5-dmLowLSjPa7-0ZcaiZ7ilwYn91lrJQ2RgdZA" />
+<meta property="twitter:image" content="https://drive.google.com/uc?export=view&id=1gyA8iuUJK6gXDf95dUhK1p3TwyVl2gAA" />
+
 
   <!-- Apple icon and manifest -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
