image add  at seo2

--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
-  <!-- ✅ Updated SEO + Social Meta Tags -->
-  <title>Rajvirsinh Dabhi – MERN Stack Developer Portfolio</title>
-  <meta name="title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
-  <meta name="description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+    <!-- ✅ Updated SEO + Social Meta Tags -->
+    <title>Rajvirsinh Dabhi – MERN Stack Developer Portfolio</title>
+    <meta
+      name="title"
+      content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio"
+    />
+    <meta
+      name="description"
+      content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development."
+    />
 
-  <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://your-portfolio-url.vercel.app/" />
-  <meta property="og:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
-  <meta property="og:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
-<meta property="og:image" content="https://drive.google.com/uc?export=view&id=1gyA8iuUJK6gXDf95dUhK1p3TwyVl2gAA" />
+    <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-url.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dp6sjwvcc/image/upload/v1752748271/1751456060919_q2usqo.jpg"
+    />
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://your-portfolio-url.vercel.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio"
+    />
+    <meta
+      property="twitter:description"
+      content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/dp6sjwvcc/image/upload/v1752748271/1751456060919_q2usqo.jpg"
+    />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://your-portfolio-url.vercel.app/" />
-  <meta property="twitter:title" content="Rajvirsinh Dabhi – MERN Stack Developer Portfolio" />
-  <meta property="twitter:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
-<meta property="twitter:image" content="https://drive.google.com/uc?export=view&id=1gyA8iuUJK6gXDf95dUhK1p3TwyVl2gAA" />
-
-
-  <!-- Apple icon and manifest -->
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-</head>
+    <!-- Apple icon and manifest -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
